# runway-hook-awslambda

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: default.yaml
awslambda/: __init__.py  _python.py  base_classes.py  constants.py  deployment_package.py  docker.py  exceptions.py  mixins.py  source_code.py  utils.py
awslambda/models/: args.py  responses.py
awslambda/python_requirements/: __init__.py  _deployment_package.py  _python_docker.py  _python_project.py  base_classes.py  deployment_package.py  poetry_project.py  python_project.py
awslambda/python_requirements/dependency_managers/: __init__.py  _pip.py  _pipenv.py  _poetry.py  base_classes.py  pip.py  poetry.py
awslambda_lookup/: __init__.py  _lookup.py  exceptions.py
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: rtd_dark.css
docs/source/hooks/python/: function.rst  layer.rst
docs/source/lookups/: awslambda.Code.rst  awslambda.CodeSha256.rst  awslambda.CompatibleArchitectures.rst  awslambda.CompatibleRuntimes.rst  awslambda.License.rst  awslambda.Runtime.rst  awslambda.S3Bucket.rst  awslambda.S3Key.rst  awslambda.S3ObjectVersion.rst  awslambda.rst
tests/: README.md  conftest.py
tests/unit/: conftest.py  factories.py
tests/unit/cfngin/: conftest.py  factories.py
tests/unit/cfngin/hooks/awslambda/: factories.py  test_base_classes.py  test_deployment_package.py  test_docker.py  test_mixins.py  test_python.py  test_source_code.py  test_utils.py
tests/unit/cfngin/hooks/awslambda/models/: test_args.py  test_responses.py
tests/unit/cfngin/hooks/awslambda/python_requirements/: test_deployment_package.py  test_python_docker.py  test_python_project.py
tests/unit/cfngin/hooks/awslambda/python_requirements/dependency_managers/: test_pip.py  test_pipenv.py  test_poetry.py
tests/unit/cfngin/lookups/handlers/: test_awslambda.py
typings/docker/: client.pyi  errors.pyi
typings/docker/api/: image.pyi
typings/docker/models/: images.pyi  resource.pyi
typings/docker/utils/: __init__.pyi  decorators.pyi
